<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aeos.dailect_dash.ScoreScreen">

    <TextView
        android:id="@+id/Score_value"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/Score_value"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/Points"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score_value"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/Play_Again_Button"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:text="@string/Play_Again_Button"
        app:layout_constraintRight_toLeftOf="@+id/Back_to_Menu_Button"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintVertical_bias="0.784" />

    <Button
        android:id="@+id/Back_to_Menu_Button"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:text="@string/Back_to_Menu_Button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.784"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.928" />
</android.support.constraint.ConstraintLayout>
